// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Link examples AlternateLinkComponent should render correctly 1`] = `
<div>
  <a
    class="v-alternate v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
    valternate=""
  >
    Destination label 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-chevron-right-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Link examples ButtonAsDisabledLinkLinkComponent should render correctly 1`] = `
<div>
  <button
    aria-disabled="true"
    class="v-link v-link-no-underline"
    disabled=""
    nounderline=""
    role="link"
    v-link=""
  >
     Print 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-device-printer v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-device-printer-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M12 8V16H4V8H12ZM6 14H10V10H6V14Z"
      />
      <path
        class="v-icon-primary"
        d="M14 0V4.18359H16V12.1836H14V6.18359H2V12.1836H0V4.18359H2V0H14ZM4 4H12V2H4V4Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Link examples ButtonAsLinkLinkComponent should render correctly 1`] = `
<div>
  <button
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
  >
     Print 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-device-printer v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-device-printer-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M12 8V16H4V8H12ZM6 14H10V10H6V14Z"
      />
      <path
        class="v-icon-primary"
        d="M14 0V4.18359H16V12.1836H14V6.18359H2V12.1836H0V4.18359H2V0H14ZM4 4H12V2H4V4Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Link examples DefaultLinkComponent should render correctly 1`] = `
<div>
  <a
    class="v-link"
    href="./components/link"
    v-link=""
  >
    Destination label
  </a>
</div>
`;

exports[`Link examples DisabledLinkComponent should render correctly 1`] = `
<div>
  <a
    aria-disabled="true"
    class="v-link"
    disabled=""
    role="link"
    v-link=""
  >
    Destination label.
  </a>
</div>
`;

exports[`Link examples InlineLinkComponent should render correctly 1`] = `
<div>
  <p>
     This is a sentence with an inline 
    <a
      class="v-link"
      href="./components/link"
      v-link=""
    >
      destination label.
    </a>
  </p>
</div>
`;

exports[`Link examples LinkOpenInNewTab should render correctly 1`] = `
<div>
  <a
    aria-label="Destination label (opens in new tab)"
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    rel="noopener noreferrer"
    target="blank"
    v-link=""
    vopensinnewtab=""
  >
     Destination label 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-maximize v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-maximize-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M16 0V6H14V3.46484L7.45703 10L6 8.54297L12.5391 2H10V0H16Z"
      />
      <path
        class="v-icon-primary"
        d="M8 3H2V14H13V8H15V16H0V1H8V3Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`Link examples LinkWithLeadingIconComponent should render correctly 1`] = `
<div>
  <a
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-arrow-back v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-arrow-back-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M9.21109 1.7085L3.91812 7.00146H16.0041V9.00146H3.91812L9.21109 14.2944L7.79703 15.7085L0.0899963 8.00146L7.79703 0.294434L9.21109 1.7085Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Destination label

  </a>
</div>
`;

exports[`Link examples LinkWithTrailingIconComponent should render correctly 1`] = `
<div>
  <a
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
  >
     Destination label 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-chevron-right-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
      />
    </svg>
  </a>
</div>
`;

exports[`Link examples WithoutUnderlineLinkComponent should render correctly 1`] = `
<div>
  <p>
     This is a sentence with an inline 
    <a
      class="v-link v-link-no-underline"
      href="./components/link"
      nounderline=""
      v-link=""
    >
      destination label 
      <svg
        aria-hidden="true"
        class="v-icon v-icon-maximize v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-maximize-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M16 0V6H14V3.46484L7.45703 10L6 8.54297L12.5391 2H10V0H16Z"
        />
        <path
          class="v-icon-primary"
          d="M8 3H2V14H13V8H15V16H0V1H8V3Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </a>
  </p>
</div>
`;
